--- a/project/.env
+++ b/project/.env
@@ -1,4 +1,4 @@
-WEATHER_API_KEY = "66051c37514a426196c203824242512"
+#This file contains unsecured details like API_KEY in a real project it should take the data from a secret key 
 PART1_URL = "https://www.metric-conversions.org/"
 PART2_URL = "https://weather.com/"
 BASE_API = "http://api.weatherapi.com/v1/"
